# python-quantities

./: .bzrignore  .gitattributes  .gitignore  .readthedocs.yaml  .travis.yml  CHANGES.txt  MANIFEST.in  README  README.rst  TODO  codemeta.json  index.html  py3tool.py  pyproject.toml  quantities.e4p  setup.cfg  setup.py  testing.py
.eric4project/: quantities.e4q  quantities.e4t
.github/workflows/: test.yml
.ropeproject/: objectdb
conda.recipe/: bld.bat  build.sh  format_version.py  meta.yaml  run_test.py  setup.py
debian/: changelog  control  copyright  docs  files  python-quantities-doc.doc-base  python-quantities-doc.docs  python-quantities.postinst.debhelper  python-quantities.prerm.debhelper  python-quantities.substvars  rules  watch.ex
debian/python-quantities-doc/DEBIAN/: control  md5sums
debian/python-quantities-doc/usr/share/doc/python-quantities-doc/: README.txt
debian/python-quantities-doc/usr/share/doc/python-quantities-doc/html/: genindex.html  index.html  modindex.html  search.html  searchindex.js
debian/python-quantities-doc/usr/share/doc/python-quantities-doc/html/_static/: jquery.js
debian/python-quantities-doc/usr/share/doc/python-quantities-doc/html/devel/: devnotes.html  documenting.html  index.html  release.html
debian/python-quantities-doc/usr/share/doc/python-quantities-doc/html/user/: credits.html  index.html  installation.html  issues.html  license.html  tutorial.html
debian/python-quantities/DEBIAN/: control  md5sums  postinst  prerm
debian/python-quantities/usr/share/pyshared/: quantities-0.9.0.egg-info
debian/python-quantities/usr/share/pyshared/quantities/: dimensionality.py  quantity.py  registry.py  unitquantity.py
debian/python-quantities/usr/share/pyshared/quantities/constants/: _codata.py  atomicunits.py  electron.py
debian/python-quantities/usr/share/pyshared/quantities/tests/: test_arithmetic.py  test_comparison.py  test_constants.py  test_methods.py  test_persistence.py
debian/python-quantities/usr/share/pyshared/quantities/units/: acceleration.py  angle.py  electromagnetism.py  energy.py  length.py  power.py  pressure.py  temperature.py  time.py  volume.py
debian/python-quantities/usr/share/python-support/: python-quantities.public
doc/: Makefile  conf.py  contents.rst  index.rst  make.bat
doc.backup/: Makefile
doc.backup/source/: conf.py  contents.rst
doc.backup/source/_static/: quantities.css
doc.backup/source/_templates/: indexsidebar.html  layout.html
doc.backup/source/devel/: devnotes.rst
doc.backup/source/reference/: intro.rst
doc.backup/source/user/: index.rst
doc/_templates/: index.html  indexsidebar.html  layout.html
doc/api/: intro.rst
doc/devel/: devnotes.rst  documenting.rst  index.rst  release.rst
doc/glossary/: index.rst
doc/reference/: index.rst  intro.rst
doc/source/: conf.py  contents.rst
doc/source/_templates/: index.html
doc/source/devel/: documenting.rst  release.rst
doc/source/user/: credits.rst  index.rst  installation.rst
doc/sphinxext/: autosummary.py  docscrape.py  ipython_console_highlighting.py  numpydoc.py  plot_directive.py
doc/user/: installation.rst  issues.rst  license.rst  tutorial.rst
doc/users/: credits.rst  index.rst  installation.rst  tutorial.rst
quantities/: __init__.py  _version.py  config.py  decorators.py  dimensionality.py  dimensionality.pyi  hyperbolicfunctions.py  markup.py  parser.py  quantity.py  quantity.pyi  registry.py  registry.pyi  sumproddifffuncs.py  trigfunctions.py  umath.py  uncertainquantity.py  unitquantity.py  unitquantity.pyi  utilities.py  version.py
quantities-data/: NIST_codata.txt
quantities.egg-info/: PKG-INFO  SOURCES.txt
quantities/constants/: NIST_codata.txt  __init__.py  _codata.py  _utils.py  alpha.py  alternateunits.py  api.py  astronomy.py  astrophysics.py  atomicunits.py  codata.py  comptonwavelengths.py  constants.py  deuteron.py  electromagnetism.py  electron.py  helion.py  magneticratios.py  massequivalence.py  massratios.py  mathematical.py  muon.py  naturalunits.py  neutron.py  proton.py  quantum.py  relationships.py  statisticalmechanics.py  tau.py  triton.py  utils.py  weak.py  xray.py
quantities/tests/: __init__.py  common.py  test_01_dimensionality.py  test_10_units.py  test_20_quantity_arithmetic.py  test_20_quantity_comparison.py  test_25_quantity_arithmetic.py  test_30_quantity_conversion.py  test_40_quantity_methods.py  test_50_persistence.py  test_50_umath.py  test_60_uncertainty.py  test_70_constants.py  test_arithmetic.py  test_comparison.py  test_constants.py  test_conversion.py  test_dimensionality.py  test_format.py  test_formatting.py  test_inheritance.py  test_methods.py  test_numpy.py  test_persistence.py  test_quantities.py  test_quantity_conversion.py  test_quantity_methods.py  test_ufuncs.py  test_umath.py  test_uncertainty.py  test_units.py
quantities/typing/: quantities.pyi
quantities/ufuncs/: exponentslogarithms.py  rounding.py  utilities.py
quantities/umath/: __init__.py  fromnumeric.py  ufunclike.py  umath.py
quantities/units/: __init__.py  acceleration.py  acceleration.pyi  angle.py  angle.pyi  api.py  area.py  area.pyi  compound.py  compound.pyi  concentration.py  concentration.pyi  density.py  dimensionless.py  dimensionless.pyi  electromagnetism.py  electromagnetism.pyi  energy.py  energy.pyi  force.py  force.pyi  frequency.py  frequency.pyi  heat.py  heat.pyi  information.py  information.pyi  length.py  length.pyi  logunits.py  mass.py  mass.pyi  massrate.py  power.py  power.pyi  prefixes.py  pressure.py  pressure.pyi  radiation.py  radiation.pyi  (+14 more)
udunits/include/: udunits.h  utparse.h  utprivate.h  utscan.h
udunits/src/: udunits_py.c  utlib.c  utparse.c  utscan.c
