[project]
name = "quantities"
version = "0.13.1.dev"
description = "Support for physical quantities with units, based on numpy"
readme = "README.rst"
requires-python = ">=3.7"
license = {file = "doc/user/license.rst"}
authors = [
  {name = "Darren Dale", email = "dsdale24@gmail.com"}
]
maintainers = [
  {name = "Andrew Davison", email = "andrew.davison@cnrs.fr"}
]
keywords = ["quantities", "units", "physical", "constants"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Topic :: Education",
  "Topic :: Scientific/Engineering"
]
dependencies = [
  "numpy>=1.16"
]
dynamic = ["entry-points"]

[project.optional-dependencies]
test = [
  "pytest",
  "wheel"
]
doc = [
  "sphinx"
]

[project.urls]
documentation = "http://python-quantities.readthedocs.io/"
repository = "https://github.com/python-quantities/python-quantities"
changelog = "https://github.com/python-quantities/python-quantities/blob/master/CHANGES.txt"
download = "http://pypi.python.org/pypi/quantities"

[build-system]
requires = ["setuptools", "versioneer[toml]"]
build-backend = "setuptools.build_meta"

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "quantities/_version.py"
versionfile_build = "quantities/_version.py"
tag_prefix = "v"
parentdir_prefix = "quantities-"
