[project]
name = "quantities"
description = "Support for physical quantities with units, based on numpy"
readme = "README.rst"
requires-python = ">=3.10"
license-files = ["doc/user/license.rst"]
authors = [
  {name = "Darren Dale", email = "dsdale24@gmail.com"}
]
maintainers = [
  {name = "Andrew Davison", email = "andrew.davison@cnrs.fr"}
]
keywords = ["quantities", "units", "physical", "constants"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Topic :: Education",
  "Topic :: Scientific/Engineering"
]
dependencies = [
  "numpy>=1.24"
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
  "pytest",
  "wheel"
]
doc = [
  "sphinx"
]
scipy = [
  # use the SciPy implementation of the trapezoidal rule
  # for numerical integration,
  "scipy"
]

[project.urls]
documentation = "http://python-quantities.readthedocs.io/"
repository = "https://github.com/python-quantities/python-quantities"
changelog = "https://github.com/python-quantities/python-quantities/blob/master/CHANGES.txt"
download = "http://pypi.python.org/pypi/quantities"

[build-system]
requires = ["setuptools", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "quantities/_version.py"
