[metadata]
author = Darren Dale
author_email = dsdale24@gmail.com
classifiers = Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: End Users/Desktop
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Education
    Topic :: Scientific/Engineering
description = Support for physical quantities based on the popular numpy library
download_url = http://pypi.python.org/pypi/quantities
keywords = quantities
    physical quantities
    units
license = BSD
long_description = Quantities is designed to handle arithmetic and conversions
    of physical quantities, which have a magnitude, dimensionality specified by
    various units, and possibly an uncertainty. Quantities builds on the popular
    numpy library and to support quantities. Quantities is designed to work with
    numpy's standard ufuncs, many of which are already supported. Quantities is
    actively developed, and while the current features and API are stable, test
    coverage is incomplete and the package is not ready for production use.
name = quantities
platforms = Any
requires = numpy (>=1.3.0)
url = http://packages.python.org/quantities
version = 0.7.96
zip_safe = False

[aliases]
release = egg_info
source = register sdist --formats=zip,gztar upload --sign
