[metadata]
author = Darren Dale
author_email = dsdale24@gmail.com
classifiers = Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: End Users/Desktop
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Education
    Topic :: Scientific/Engineering
description = Support for physical quantities with units, based on numpy
download_url = http://pypi.python.org/pypi/quantities
keywords = quantities
    physical quantities
    units
license = BSD
long_description = Quantities is designed to handle arithmetic and conversions
    of physical quantities, which have a magnitude, dimensionality specified by
    various units, and possibly an uncertainty. See the `tutorial 
    <http://packages.python.org/quantities/user/tutorial.html>`_ for examples.
    Quantities builds on the popular numpy library and is designed to work with
    numpy ufuncs, many of which are already supported. Quantities is actively
    developed, and while the current features and API are stable, test coverage
    is incomplete and so the package is not suggested for production use. See
    the tutorial_ for more information.
    .. _tutorial: http://packages.python.org/quantities/user/tutorial.html
name = quantities
platforms = Any
requires = python (>=2.6.0)
    numpy (>=1.4.0)
url = http://packages.python.org/quantities
version = 0.9.0
zip_safe = False

[aliases]
release = egg_info
source = register sdist --formats=zip,gztar upload --sign
